--- a/views/help.ejs
+++ b/views/help.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
 
-    <title>Supaplex | Help</title>
+    <title>Supaplex | Welcome</title>
   </head>
 
   <body>
@@ -27,142 +27,143 @@
 
       <main>
         <div class="glass">
-          <div class="wrapper">
-            <div class="box a" style="height: 100%">
-              <center>
-                <div class="profile-img">
-                  <img src="/images/favicon.ico" />
-                </div>
-                <div class="links">
-                  <center style="width: 4vw">
-                    <ol>
-                      <li>
-                        <a href="/"><i class="fa-solid fa-house"></i></a>
-                      </li>
-
-                      <li>
-                        <a href="/levelsets"
-                          ><i class="fa-solid fa-bars"></i
-                        ></a>
-                      </li>
-                      <li>
-                        <a href="/gameplay"
-                          ><i class="fa-solid fa-gamepad"></i
-                        ></a>
-                      </li>
-                      <li>
-                        <a href="https://discord.gg/Rwsjdxg"
-                          ><i class="fa-brands fa-discord"></i
-                        ></a>
-                      </li>
-
-                      <li>
-                        <a href="/about"
-                          ><i class="fa-solid fa-question"></i
-                        ></a>
-                      </li>
-                      <li>
-                        <a href="/help" class="active"
-                          ><i class="fa-solid fa-hand-holding-hand"></i
-                        ></a>
-                      </li>
-                      <li>
-                        <a href="https://www.supaplex.online/test/"
-                          ><i class="fa-solid fa-vial-circle-check"></i
-                        ></a>
-                      </li>
-
-                      <li>
-                        <a href="https://sple.me/"
-                          ><i class="fa-regular fa-pen-to-square"></i
-                        ></a>
-                      </li>
-
-                      <li>
-                        <a
-                          href="#"
-                          style="
-                            background-color: #2e1bff23;
-                            border-radius: 8px;
-                          "
-                          ><i class="fa-solid fa-arrow-right-from-bracket"></i
-                        ></a>
-                      </li>
-                    </ol>
-                  </center>
-                </div>
-              </center>
-            </div>
-            <div class="box b">
-              <!--| ---Main Content |-->
-              <div class="gridCont">
-                <div class="grdC">
-                  <h2>Help</h2>
-                  <p>
-                    The name is pretty self-explanatory, this is meant to help
-                    you with the new UI
-                  </p>
-                </div>
-                <div class="grdC">
-                  <h2>The New Navigation System</h2>
-                  <p>
-                    This Vector-ish design has a new mode of navigation, it is
-                    the big ass bar on the left. If you somehow haven't noticed,
-                    I would advice you go see a doctor, but the nav bar has
-                    icons to represent each page. You would probably start in
-                    the home page, unless you manually typed in another URL, and
-                    you would see the usual, the update section, the recent
-                    levels, and others. You probably came to this site from the
-                    home page using the nav bar. There are other pages linked to
-                    the nav bar and basically or TL:DR the nav bar is used for
-                    navigation, yeah shocker I know.
-                  </p>
-                </div>
-                <div class="grdC">
-                  <h2>The Glassmorphic UI</h2>
-                  <p>
-                    The website is now using a glassmorphic UI, because... it is
-                    using a glassmorphic UI, idk I felt like this UI was nice.
-                    If you haven't noticed there is a huge zonk in the
-                    background which is spinning, and again idk why I put it
-                    there, it looked nice I guess. There is also a loading
-                    animation and a new error page which might have a little
-                    easter egg in the future.
-                  </p>
-                </div>
-                <div class="grdC">
-                  <h2>
-                    The New Level UI [NOT IMPLEMENTED YET, MIGHT IMPLEMENT IN
-                    THE FUTURE]
-                  </h2>
-                  <p>
-                    This is not yet implemented, partially because I am lazy,
-                    but I am thinking of a new level UI. Again not sure if I
-                    will even make it.
-                  </p>
-                </div>
-                <div class="grdC">
-                  <h2>The New (HORRIBLE) Font</h2>
-                  <p>
-                    You might have noticed that the website is using a horrible
-                    looking font, and thats because it is a font made by me,
-                    your local dumbass, and I thought it would be a great idea
-                    to put this eye-sore of a font into this website design. No
-                    need to thank me.
-                  </p>
-                </div>
-                <div class="grdC">
-                  <h2>If you have questions about the game itself</h2>
-                  <p>
-                    If your questions are about the game and not the UI, then
-                    you should click on the question mark button on the nav bar
-                    to visit the about page.
-                  </p>
-                </div>
-                <br />
+          <div class="box a" style="height: 100%">
+            <center>
+              <div class="profile-img">
+                <img src="/images/favicon.ico" />
               </div>
-              <!--| --Main Content End |-->
+              <div class="links">
+                <ol>
+                  <li>
+                    <a href="/"><i class="fa-solid fa-house"></i></a>
+                  </li>
+                </ol>
+
+                <ol>
+                  <li>
+                    <a href="/levelsets"><i class="fa-solid fa-bars"></i></a>
+                  </li>
+                </ol>
+                <ol>
+                  <li>
+                    <a href="/gameplay"><i class="fa-solid fa-gamepad"></i></a>
+                  </li>
+                </ol>
+                <ol>
+                  <li>
+                    <a href="https://discord.gg/Rwsjdxg"
+                      ><i class="fa-brands fa-discord"></i
+                    ></a>
+                  </li>
+                </ol>
+
+                <ol>
+                  <li>
+                    <a href="/about"><i class="fa-solid fa-question"></i></a>
+                  </li>
+                </ol>
+                <ol>
+                  <li>
+                    <a href="/help" class="active"
+                      ><i class="fa-solid fa-info"></i
+                    ></a>
+                  </li>
+                </ol>
+                <ol>
+                  <li>
+                    <a href="https://www.supaplex.online/test/"
+                      ><i class="fa-solid fa-vial-circle-check"></i
+                    ></a>
+                  </li>
+                </ol>
+
+                <ol>
+                  <li>
+                    <a href="https://sple.me/"
+                      ><i class="fa-regular fa-pen-to-square"></i
+                    ></a>
+                  </li>
+                </ol>
+
+                <ol>
+                  <li>
+                    <a
+                      href="#"
+                      style="background-color: #2e1bff23; border-radius: 8px"
+                      ><i class="fa-solid fa-arrow-right-from-bracket"></i
+                    ></a>
+                  </li>
+                </ol>
+              </div>
+            </center>
+          </div>
+          <div class="box b">
+            <!--| ---Main Content |-->
+            <div class="gridCont">
+              <div class="grdC">
+                <h2>Help</h2>
+                <p>
+                  The name is pretty self-explanatory, this is meant to help you
+                  with the new UI
+                </p>
+              </div>
+              <div class="grdC">
+                <h2>The New Navigation System</h2>
+                <p>
+                  This Vector-ish design has a new mode of navigation, it is the
+                  big ass bar on the left. If you somehow haven't noticed, I
+                  would advice you go see a doctor, but the nav bar has icons to
+                  represent each page. You would probably start in the home
+                  page, unless you manually typed in another URL, and you would
+                  see the usual, the update section, the recent levels, and
+                  others. You probably came to this site from the home page
+                  using the nav bar. There are other pages linked to the nav bar
+                  and basically or TL:DR the nav bar is used for navigation,
+                  yeah shocker I know.
+                </p>
+              </div>
+              <div class="grdC">
+                <h2>The Glassmorphic UI</h2>
+                <p>
+                  The website is now using a glassmorphic UI, because... it is
+                  using a glassmorphic UI, idk I felt like this UI was nice. If
+                  you haven't noticed there is a huge zonk in the background
+                  which is spinning, and again idk why I put it there, it looked
+                  nice I guess. There is also a loading animation and a new
+                  error page which might have a little easter egg in the future.
+                </p>
+              </div>
+              <div class="grdC">
+                <h2>
+                  The New Level UI [NOT IMPLEMENTED YET, MIGHT IMPLEMENT IN THE
+                  FUTURE]
+                </h2>
+                <p>
+                  This is not yet implemented, partially because I am lazy, but
+                  I am thinking of a new level UI. Again not sure if I will even
+                  make it.
+                </p>
+              </div>
+              <div class="grdC">
+                <h2>The New (HORRIBLE) Font</h2>
+                <p>
+                  You might have noticed that the website is using a horrible
+                  looking font, and thats because it is a font made by me, your
+                  local dumbass, and I thought it would be a great idea to put
+                  this eye-sore of a font into this website design. No need to
+                  thank me.
+                </p>
+              </div>
+              <div class="grdC">
+                <h2>If you have questions about the game itself</h2>
+                <p>
+                  If your questions are about the game and not the UI, then you
+                  should click on the question mark button on the nav bar to
+                  visit the about page.
+                </p>
+              </div>
             </div>
+            <!--| --Main Content End |-->
           </div>
         </div>
       </main>
