--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,7 +36,7 @@
   }
 }
 :root {
-  font: normal normal 1vw / 1 "Endo", sans-serif;
+  font: normal normal 1.1vw / 1 "Endo", sans-serif;
   min-height: 100vh;
 }
 :root {
@@ -159,7 +159,7 @@ main {
   width: 100%;
 }
 
-a {
+a:not(.levelAnchors) {
   text-decoration: none;
   color: var(--text-color);
   background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
@@ -172,7 +172,6 @@ a {
   background-size: 100% 0.1em, 0 0.1em;
   background-position: 100% 100%, 0 100%;
   background-repeat: no-repeat;
-  transition: background-size 400ms;
 }
 
 a:hover,
@@ -185,10 +184,13 @@ a:focus {
   box-shadow: 0 8px 32px 0 rgba(66, 11, 11, 0.134);
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
-  margin: auto;
   height: 100vh;
   width: 100%;
   z-index: 0;
+  overflow: scroll;
+  display: grid;
+  grid-template-columns: 5% 94%;
+  grid-gap: 0.5%;
 }
 .useless-padding {
   max-height: 100%;
@@ -216,7 +218,7 @@ a:focus {
 .links ol li a {
   text-decoration: none;
   width: 70%;
-  padding: 20% 0;
+  aspect-ratio: 1/0.95;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -245,11 +247,10 @@ a:focus {
   grid-template-rows: repeat(auto, auto);
   grid-gap: 1%;
   padding: 20px 20px;
-  background-color: #ffffff10;
 }
 .grdC {
-  padding: 10px;
-  border-radius: 1%;
+  padding: 10px 15px;
+  border-radius: 4px;
   background-color: #00000015;
   border: 1px solid #ffffff1d;
 }
@@ -259,14 +260,12 @@ a:focus {
 }
 .newLevelsets,
 .recentLevels {
-  margin: 0 0.5%;
   height: 100%;
   padding: 20px 0;
   width: 30%;
 }
 .activity {
   text-align: center;
-  margin: 0 0.5%;
   padding: 2% 2.5%;
   height: 100%;
   display: grid;
@@ -284,14 +283,24 @@ td {
   padding: 0.125em 0.5em;
 }
 .lvlSetsColumn {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  max-height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(30px, auto);
+  grid-gap: 15px;
+  justify-items: stretch;
 }
-.lvlSetsColumn a {
-  margin-bottom: 1%;
+
+.lvlSetsColumn a.levelAnchors {
+  text-decoration: none;
+  padding: 5px 20px;
+  border-radius: 4px;
+  text-align: center;
+  display: block;
+}
+.lvlSetsColumn .levelWrapper:hover,
+:focus a.levelAnchors {
+  transform: translate(-5px, -5px);
 }
 .smallT {
-  font-size: 0.5vw;
+  font-size: 0.9vw;
 }
