--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ERROR 404</title>
-    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <link
       rel="shortcut icon"
@@ -13,6 +13,27 @@
       height="40px"
       width="40px"
     />
+    <style>
+      * {
+        transition: 0.5s;
+      }
+      button {
+        font-family: "Endo";
+        border-radius: 4px;
+        background-color: rgb(29, 29, 29);
+        border: none;
+        border-bottom: 5px solid rgb(81, 54, 255);
+        color: white;
+        padding: 10px 20px;
+        width: 60%;
+        text-decoration: none;
+        cursor: pointer;
+      }
+      button:hover {
+        border-radius: 25px;
+        width: 75%;
+      }
+    </style>
   </head>
   <body>
     <!-- loader -->
@@ -39,28 +60,17 @@
           transform: translate(-50%, -50%);
         "
       >
-        <h1 style="font-size: 100px; font-weight: 100">Ɓ</h1>
+        <img
+          src="/images/supaplexZonk.svg"
+          width="200px"
+          style="filter: invert()"
+        />
         <p style="text-align: center">
-          Error 404 - Page Not found... <br /><br />
+          Error 404 - Page Not found... <br />
           The port you have entered leads to...nowhere? <br />
           You can click this button to return to Supaplex home page.
-          <i class="bx bx-down-arrow-circle"></i><br /><br />
-          <button
-            style="
-              font-family: 'Endo';
-              background-color: rgb(41, 41, 41);
-              border: none;
-              border-bottom: 5px solid rgb(81, 54, 255);
-              border-radius: 5px;
-              padding: 10px 15px;
-              cursor: pointer;
-              box-shadow: 0px 5px 10px 2px rgba(151, 32, 255, 0.436);
-              color: rgb(228, 228, 228);
-            "
-            onclick="location.href = '/'"
-          >
-            Teleport to Supaplex
-          </button>
+          <i class="bx bx-down-arrow-circle"></i><br />
+          <button onclick="location.href = '/'">Teleport to Supaplex</button>
         </p>
       </div>
     </div>
