--- a/views/lvlset.ejs
+++ b/views/lvlset.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,13 +11,15 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
 
-    <title>Supaplex | Levelsets</title>
+    <title>Supaplex | Welcome</title>
   </head>
 
   <body>
-    <video autoplay muted loop id="myVideo">
-      <source src="/images/ZONK-ANIMATION.mp4" type="video/mp4" />
-    </video>
+    <div class="vidC">
+      <video autoplay muted loop id="myVideo">
+        <source src="/images/ZONK-ANIMATION.mp4" type="video/mp4" />
+      </video>
+    </div>
     <section>
       <div class="loader">
         <img src="/images/supaplexZonk.svg" name="load" class="loader-img" />
@@ -25,87 +27,83 @@
 
       <main>
         <div class="glass">
-          <div class="wrapper">
-            <div class="box a" style="height: 100%">
-              <center>
-                <div class="profile-img">
-                  <img src="/images/favicon.ico" />
-                </div>
-                <div class="links">
-                  <ol>
-                    <li>
-                      <a href="/" class="active"
-                        ><i class="fa-solid fa-house"></i
-                      ></a>
-                    </li>
-                  </ol>
+          <div class="box a" style="height: 100%">
+            <center>
+              <div class="profile-img">
+                <img src="/images/favicon.ico" />
+              </div>
+              <div class="links">
+                <ol>
+                  <li>
+                    <a href="/"><i class="fa-solid fa-house"></i></a>
+                  </li>
+                </ol>
 
-                  <ol>
-                    <li>
-                      <a href="/levelsets"><i class="fa-solid fa-bars"></i></a>
-                    </li>
-                  </ol>
-                  <ol>
-                    <li>
-                      <a href="/gameplay"
-                        ><i class="fa-solid fa-gamepad"></i
-                      ></a>
-                    </li>
-                  </ol>
-                  <ol>
-                    <li>
-                      <a href="https://discord.gg/Rwsjdxg"
-                        ><i class="fa-brands fa-discord"></i
-                      ></a>
-                    </li>
-                  </ol>
+                <ol>
+                  <li>
+                    <a href="/levelsets" class="active"
+                      ><i class="fa-solid fa-bars"></i
+                    ></a>
+                  </li>
+                </ol>
+                <ol>
+                  <li>
+                    <a href="/gameplay"><i class="fa-solid fa-gamepad"></i></a>
+                  </li>
+                </ol>
+                <ol>
+                  <li>
+                    <a href="https://discord.gg/Rwsjdxg"
+                      ><i class="fa-brands fa-discord"></i
+                    ></a>
+                  </li>
+                </ol>
 
-                  <ol>
-                    <li>
-                      <a href="/about"><i class="fa-solid fa-question"></i></a>
-                    </li>
-                  </ol>
-                  <ol>
-                    <li>
-                      <a href="/help"><i class="fa-solid fa-info"></i></a>
-                    </li>
-                  </ol>
-                  <ol>
-                    <li>
-                      <a href="https://www.supaplex.online/test/"
-                        ><i class="fa-solid fa-vial-circle-check"></i
-                      ></a>
-                    </li>
-                  </ol>
+                <ol>
+                  <li>
+                    <a href="/about"><i class="fa-solid fa-question"></i></a>
+                  </li>
+                </ol>
+                <ol>
+                  <li>
+                    <a href="/help"><i class="fa-solid fa-info"></i></a>
+                  </li>
+                </ol>
+                <ol>
+                  <li>
+                    <a href="https://www.supaplex.online/test/"
+                      ><i class="fa-solid fa-vial-circle-check"></i
+                    ></a>
+                  </li>
+                </ol>
 
-                  <ol>
-                    <li>
-                      <a href="https://sple.me/"
-                        ><i class="fa-regular fa-pen-to-square"></i
-                      ></a>
-                    </li>
-                  </ol>
+                <ol>
+                  <li>
+                    <a href="https://sple.me/"
+                      ><i class="fa-regular fa-pen-to-square"></i
+                    ></a>
+                  </li>
+                </ol>
 
-                  <ol>
-                    <li>
-                      <a
-                        href="#"
-                        style="background-color: #2e1bff23; border-radius: 8px"
-                        ><i class="fa-solid fa-arrow-right-from-bracket"></i
-                      ></a>
-                    </li>
-                  </ol>
-                </div>
-              </center>
-            </div>
-            <div class="box b">
-              <!--| ---Main Content |-->
-              <h1 style="font-weight: 200; font-size: 50px; margin-top: 10px">
-                Levelsets!
-              </h1>
-              <p>Gregot pls insert levelsets i am too lazy, sry</p>
-              <!--| --Main Content End |-->
-            </div>
+                <ol>
+                  <li>
+                    <a
+                      href="#"
+                      style="background-color: #2e1bff23; border-radius: 8px"
+                      ><i class="fa-solid fa-arrow-right-from-bracket"></i
+                    ></a>
+                  </li>
+                </ol>
+              </div>
+            </center>
+          </div>
+          <div class="box b">
+            <!--| ---Main Content |-->
+            <h1 style="font-weight: 200; font-size: 50px; margin-top: 10px">
+              Levelsets!
+            </h1>
+            <p>Gone... Reduced to atoms</p>
+            <!--| --Main Content End |-->
           </div>
         </div>
       </main>
